# ollama-admin-ui

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml  sample.env  tailwind.config.js
app/: lib.py  main.py  ollama-library.py
app/ollama_remote/: ollama_remote.py  remote-library.json
app/static/css/: output.css
app/templates/: backup.html  button-download.html  button-downloaded.html  error-bar.html  index.html  item.html  library.html  message-poll.html  message.html  messages.html  refresh-library.html  remote-library.html  skeleton.html  start-download.html  start-library-refresh.html  status-bar-hidden.html
app/wollama/: wollama.py
app/wollama/cache/: ollama-catalog-cache-0.0.0  remote-ollama-catalog-cache-0.0.0
