[project]
name = "ollama-admin-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "importlib-resources>=6.5.2",
    "jinja2>=3.1.6",
    "log2d>=0.0.18",
    "ollama>=0.4.7",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "yarl>=1.18.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
]
